# serveET

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tasks.py
servidora/: config.yml.sample  main.py
servidora/db/: __init__.py  helper.py  sql_command.py
servidora/pveapi/: __init__.py  power_op.py  status.py  task.py  vm.py
servidora/res/: __init__.py  strings.yml
servidora/util/: __init__.py  human_bytes.py  parser.py  util.py
tests/: conftest.py
