[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_third_party = ["db", "fabric", "proxmoxer", "pveapi", "res", "telebot", "util", "yaml"]

[tool.commitizen]
version = "0.0.0"
version_files = [
    "servidora/__init__.py",
    "servidora/main.py",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
