[metadata]
name = servidora
version = attr: servidora.__version__
description = a telegram bot for automating virtual machine provisioning
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
author = Muse Sisay Mulatu
author_email = git.muse.sisay@gmail.com
keywords = telegram bot virtualmachine provision
# license = BSD 3-Clause License
url = https://github.com/muse-sisay/serveET
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/muse-sisay/serveET/issues
    Changelog = https://github.com/muse-sisay/serveET/blob/master/CHANGELOG.md
    Documentation = https://github.com/muse-sisay/serveET/blob/master/README.md
    Download = https://pypi.org/project/readme-coverage-badger/#files
    Source = https://github.com/muse-sisay/serveET/

[options]
packages = servidora
include_package_data = True
python_requires = >=3.6
install_requires =
    PyYAML
    fabric
    proxmoxer
    pyTelegramBotAPI

[options.entry_points]
console_scripts =
    readme-cov = servidora.main:main

# --- Individual linter configuration ---------------------------------------

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,__pycache__,__init__.py,.pytest_cache,.tox

# --- See pyproject.toml for other linter configurations (black, isort) -----

# --- See pyproject.toml for commitizen configuration -----------------------

# --- Coverage configuration ------------------------------------------------

[coverage:run]
omit =
    venv/*
    tests/*
    .tox/*

branch = True

[coverage:report]
skip_covered = True

show_missing = True

# --- pytest configuration --------------------------------------------------

# See warning at https://docs.pytest.org/en/stable/reference/customize.html#setup-cfg
# I put the config here because I somehow couldn't get tox to play nicely with settings in pyproject.toml

[tool:pytest]
addopts =
    --cov=. --cov-append --cov-report html --cov-report xml --cov-report term-missing:skip-covered -s -vv
testpaths = tests

# --- tox automation configuration -------------------------------------------

[tox:tox]
envlist = lint, py36, py37, py38, py39
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.8: lint, py38
    3.7: py37
    3.6: py36

[testenv:lint]
skip_install = True
basepython = python
deps =
    -r{toxinidir}/requirements.txt
commands =
    black . --check
    isort --check-only --profile black .
    flake8 tests servidora

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -r{toxinidir}/requirements.txt
commands =
    pytest
